packages/cel-es/src/grammar.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/

"use strict";



import { ExprBuilder } from "./builder.js";
const builder = new ExprBuilder();

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Expr: peg$parseExpr };
  var peg$startRuleFunction = peg$parseExpr;

  var peg$c0 = "?";
  var peg$c1 = ":";
  var peg$c2 = "||";
  var peg$c3 = "&&";
  var peg$c4 = "<=";
  var peg$c5 = "<";
  var peg$c6 = ">=";
  var peg$c7 = ">";
  var peg$c8 = "==";
  var peg$c9 = "!=";
  var peg$c10 = "in";
  var peg$c11 = "!";
  var peg$c12 = "-";
  var peg$c13 = ".";
  var peg$c14 = "(";
  var peg$c15 = ")";
  var peg$c16 = "[";
  var peg$c17 = "]";
  var peg$c18 = "{";
  var peg$c19 = ",";
  var peg$c20 = "}";
  var peg$c21 = "0x";
  var peg$c22 = "\"\"\"";
  var peg$c23 = "'''";
  var peg$c24 = "\"";
  var peg$c25 = "'";
  var peg$c26 = "\\";
  var peg$c27 = "\\x";
  var peg$c28 = "\\u";
  var peg$c29 = "\\U";
  var peg$c30 = "\r\n";
  var peg$c31 = "true";
  var peg$c32 = "false";
  var peg$c33 = "null";
  var peg$c34 = "as";
  var peg$c35 = "break";
  var peg$c36 = "const";
  var peg$c37 = "continue";
  var peg$c38 = "else";
  var peg$c39 = "for";
  var peg$c40 = "function";
  var peg$c41 = "if";
  var peg$c42 = "import";
  var peg$c43 = "let";
  var peg$c44 = "loop";
  var peg$c45 = "package";
  var peg$c46 = "namespace";
  var peg$c47 = "return";
  var peg$c48 = "var";
  var peg$c49 = "void";
  var peg$c50 = "while";
  var peg$c51 = "//";

  var peg$r0 = /^[+\-]/;
  var peg$r1 = /^[*\/%]/;
  var peg$r2 = /^[.[]/;
  var peg$r3 = /^[([]/;
  var peg$r4 = /^[({]/;
  var peg$r5 = /^[_a-zA-Z]/;
  var peg$r6 = /^[_a-zA-Z0-9]/;
  var peg$r7 = /^[uU]/;
  var peg$r8 = /^[0-9]/;
  var peg$r9 = /^[0-9abcdefABCDEF]/;
  var peg$r10 = /^[eE]/;
  var peg$r11 = /^[bB]/;
  var peg$r12 = /^[rR]/;
  var peg$r13 = /^[abfnrtv]/;
  var peg$r14 = /^["'`\\?]/;
  var peg$r15 = /^[0-3]/;
  var peg$r16 = /^[0-7]/;
  var peg$r17 = /^[\n\r]/;
  var peg$r18 = /^[\t\n\f\r ]/;

  var peg$e0 = peg$literalExpectation("?", false);
  var peg$e1 = peg$literalExpectation(":", false);
  var peg$e2 = peg$literalExpectation("||", false);
  var peg$e3 = peg$literalExpectation("&&", false);
  var peg$e4 = peg$literalExpectation("<=", false);
  var peg$e5 = peg$literalExpectation("<", false);
  var peg$e6 = peg$literalExpectation(">=", false);
  var peg$e7 = peg$literalExpectation(">", false);
  var peg$e8 = peg$literalExpectation("==", false);
  var peg$e9 = peg$literalExpectation("!=", false);
  var peg$e10 = peg$literalExpectation("in", false);
  var peg$e11 = peg$classExpectation(["+", "-"], false, false);
  var peg$e12 = peg$classExpectation(["*", "/", "%"], false, false);
  var peg$e13 = peg$literalExpectation("!", false);
  var peg$e14 = peg$literalExpectation("-", false);
  var peg$e15 = peg$classExpectation([".", "["], false, false);
  var peg$e16 = peg$literalExpectation(".", false);
  var peg$e17 = peg$classExpectation(["(", "["], false, false);
  var peg$e18 = peg$literalExpectation("(", false);
  var peg$e19 = peg$literalExpectation(")", false);
  var peg$e20 = peg$literalExpectation("[", false);
  var peg$e21 = peg$literalExpectation("]", false);
  var peg$e22 = peg$classExpectation(["(", "{"], false, false);
  var peg$e23 = peg$literalExpectation("{", false);
  var peg$e24 = peg$literalExpectation(",", false);
  var peg$e25 = peg$literalExpectation("}", false);
  var peg$e26 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false);
  var peg$e27 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e28 = peg$literalExpectation("0x", false);
  var peg$e29 = peg$classExpectation(["u", "U"], false, false);
  var peg$e30 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e31 = peg$classExpectation([["0", "9"], "a", "b", "c", "d", "e", "f", "A", "B", "C", "D", "E", "F"], false, false);
  var peg$e32 = peg$classExpectation(["e", "E"], false, false);
  var peg$e33 = peg$classExpectation(["b", "B"], false, false);
  var peg$e34 = peg$classExpectation(["r", "R"], false, false);
  var peg$e35 = peg$literalExpectation("\"\"\"", false);
  var peg$e36 = peg$anyExpectation();
  var peg$e37 = peg$literalExpectation("'''", false);
  var peg$e38 = peg$literalExpectation("\"", false);
  var peg$e39 = peg$literalExpectation("'", false);
  var peg$e40 = peg$literalExpectation("\\", false);
  var peg$e41 = peg$classExpectation(["a", "b", "f", "n", "r", "t", "v"], false, false);
  var peg$e42 = peg$classExpectation(["\"", "'", "`", "\\", "?"], false, false);
  var peg$e43 = peg$literalExpectation("\\x", false);
  var peg$e44 = peg$literalExpectation("\\u", false);
  var peg$e45 = peg$literalExpectation("\\U", false);
  var peg$e46 = peg$classExpectation([["0", "3"]], false, false);
  var peg$e47 = peg$classExpectation([["0", "7"]], false, false);
  var peg$e48 = peg$literalExpectation("\r\n", false);
  var peg$e49 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e50 = peg$literalExpectation("true", false);
  var peg$e51 = peg$literalExpectation("false", false);
  var peg$e52 = peg$literalExpectation("null", false);
  var peg$e53 = peg$literalExpectation("as", false);
  var peg$e54 = peg$literalExpectation("break", false);
  var peg$e55 = peg$literalExpectation("const", false);
  var peg$e56 = peg$literalExpectation("continue", false);
  var peg$e57 = peg$literalExpectation("else", false);
  var peg$e58 = peg$literalExpectation("for", false);
  var peg$e59 = peg$literalExpectation("function", false);
  var peg$e60 = peg$literalExpectation("if", false);
  var peg$e61 = peg$literalExpectation("import", false);
  var peg$e62 = peg$literalExpectation("let", false);
  var peg$e63 = peg$literalExpectation("loop", false);
  var peg$e64 = peg$literalExpectation("package", false);
  var peg$e65 = peg$literalExpectation("namespace", false);
  var peg$e66 = peg$literalExpectation("return", false);
  var peg$e67 = peg$literalExpectation("var", false);
  var peg$e68 = peg$literalExpectation("void", false);
  var peg$e69 = peg$literalExpectation("while", false);
  var peg$e70 = peg$classExpectation(["\t", "\n", "\f", "\r", " "], false, false);
  var peg$e71 = peg$literalExpectation("//", false);

  var peg$f0 = function(condition, t, f) { return builder.newCallExpr(offset(), "_?_:_", [condition, t, f]) };
  var peg$f1 = function(value) { return builder.newCallExpr(offset(), "_||_", value) };
  var peg$f2 = function(value) { return builder.newCallExpr(offset(), "_&&_", value) };
  var peg$f3 = function(firstExpr, operator, nextExpr) { return (prevExpr) => builder.newCallExpr(offset(), operator, [prevExpr, nextExpr]) };
  var peg$f4 = function(firstExpr, operations) { return operations.reduce((expr, op) => op(expr), firstExpr); };
  var peg$f5 = function(operator) { return `_${operator}_` };
  var peg$f6 = function() { return "@in" };
  var peg$f7 = function(firstExpr, o) { return `_${o}_` };
  var peg$f8 = function(firstExpr, operator, nextExpr) { return (prevExpr) => builder.newCallExpr(offset(), operator, [prevExpr, nextExpr]) };
  var peg$f9 = function(firstExpr, operations) { return operations.reduce((expr, op) => op(expr), firstExpr); };
  var peg$f10 = function(firstExpr, o) { return `_${o}_` };
  var peg$f11 = function(firstExpr, operator, nextExpr) { return (prevExpr) => builder.newCallExpr(offset(), operator, [prevExpr, nextExpr]) };
  var peg$f12 = function(firstExpr, operations) { return operations.reduce((expr, op) => op(expr), firstExpr); };
  var peg$f13 = function(ops, expr) {
                    if (ops.length % 2 === 0) {
                      return expr;
                    } else {
                      return builder.newCallExpr(offset(), `${ops[0]}_`, [expr]);
                    }
                  };
  var peg$f14 = function(firstExpr, selects) { return selects.reduce((expr, op) => op(expr), firstExpr); };
  var peg$f15 = function(field) { return prevExpr => builder.newSelectExpr(offset(), prevExpr, field) };
  var peg$f16 = function(ident, args) { return prevExpr => builder.newMemberCallExpr(offset(), prevExpr, ident, args) };
  var peg$f17 = function(index) { return prevExpr => builder.newCallExpr(offset(), "_[_]", [prevExpr, index]) };
  var peg$f18 = function(name) { return builder.newIdentExpr(offset(), name) };
  var peg$f19 = function(ident, args) { return builder.newCallExpr(offset(), ident, args) };
  var peg$f20 = function(name, entries) { return builder.newStructExpr(offset(), entries, name) };
  var peg$f21 = function(elements) { return builder.newListExpr(offset(), elements) };
  var peg$f22 = function(entries) { return builder.newStructExpr(offset(), entries) };
  var peg$f23 = function(ident, value) { return builder.newStructEntry(offset(), ident, value) };
  var peg$f24 = function(key, value) { return builder.newMapEntry(offset(), key, value) };
  var peg$f25 = function(digits) { return builder.newInt64Expr(offset(), digits) };
  var peg$f26 = function(digits) { return builder.newUnsignedInt64Expr(offset(), digits) };
  var peg$f27 = function(digits) { return builder.newDoubleExpr(offset(), digits) };
  var peg$f28 = function(bytes) { return builder.newStringExpr(offset(), bytes) };
  var peg$f29 = function(bytes) { return builder.newBytesExpr(offset(), bytes) };
  var peg$f30 = function(value) {
                  switch(value) {
                    case 'a': return "\x07";
                    case 'b': return "\b";
                    case 'f': return "\f";
                    case 'n': return "\n";
                    case 'r': return "\r";
                    case 't': return "\t";
                    case 'v': return "\v";
                  }
                };
  var peg$f31 = function(value) { return value.flat() };
  var peg$f32 = function(value) { return parseInt(value, 16) };
  var peg$f33 = function(value) { return parseInt(value, 16) };
  var peg$f34 = function(value) { return parseInt(value, 16) };
  var peg$f35 = function(value) { return parseInt(value, 8) };
  var peg$f36 = function(keyword) { return builder.newBoolExpr(offset(), keyword) };
  var peg$f37 = function() { return builder.newNullExpr(offset()) };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpr() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseConditionalOr();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseS();
      s3 = peg$currPos;
      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 63) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseConditionalOr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseS();
        if (input.charCodeAt(peg$currPos) === 63) {
          s3 = peg$c0;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseConditionalOr();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseS();
            if (input.charCodeAt(peg$currPos) === 58) {
              s6 = peg$c1;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseExpr();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseS();
                peg$savedPos = s0;
                s0 = peg$f0(s1, s4, s7);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseConditionalOr() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseConditionalAnd();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$currPos;
      s4 = peg$parseS();
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s5 = peg$c2;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = undefined;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$parseConditionalAnd();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        s5 = peg$parseS();
        if (input.substr(peg$currPos, 2) === peg$c2) {
          s6 = peg$c2;
          peg$currPos += 2;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s4 = peg$parseConditionalAnd();
          if (s4 === peg$FAILED) {
            peg$currPos = s3;
            s3 = peg$FAILED;
          } else {
            s3 = s4;
          }
        } else {
          s3 = s4;
        }
      }
      if (s2.length < 2) {
        peg$currPos = s1;
        s1 = peg$FAILED;
      } else {
        s1 = s2;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f1(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseConditionalAnd() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseRelation();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$currPos;
      s4 = peg$parseS();
      if (input.substr(peg$currPos, 2) === peg$c3) {
        s5 = peg$c3;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = undefined;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$parseRelation();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        s5 = peg$parseS();
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s6 = peg$c3;
          peg$currPos += 2;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s4 = peg$parseRelation();
          if (s4 === peg$FAILED) {
            peg$currPos = s3;
            s3 = peg$FAILED;
          } else {
            s3 = s4;
          }
        } else {
          s3 = s4;
        }
      }
      if (s2.length < 2) {
        peg$currPos = s1;
        s1 = peg$FAILED;
      } else {
        s1 = s2;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseRelation() {
    var s0, s1, s2, s3, s4, s5, s6;
